# serializer version: 1
# name: TestECWolfGenerator.test_generate
  tuple(
    list([
      'ecwolf',
      '--savedir',
      '/userdata/saves/ecwolf/Wolfenstein 3D.ecwolf',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
      'XDG_DATA_HOME': '/userdata/saves',
    }),
  )
# ---
# name: TestECWolfGenerator.test_generate[config]
  '''
  Vid_FullScreen = 1;
  Vid_Aspect = 0;
  Vid_Vsync = 1;
  QuitOnEscape = 1;
  JoystickEnabled = 1;
  FullScreenWidth = 1920;
  FullScreenHeight = 1080;
  
  '''
# ---
# name: TestECWolfGenerator.test_generate_chdir_raises
  tuple(
    list([
      'ecwolf',
      '--savedir',
      '/userdata/saves/ecwolf/Wolfenstein 3D.ecwolf',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
      'XDG_DATA_HOME': '/userdata/saves',
    }),
  )
# ---
# name: TestECWolfGenerator.test_generate_chdir_raises[config]
  '''
  Vid_FullScreen = 1;
  Vid_Aspect = 0;
  Vid_Vsync = 1;
  QuitOnEscape = 1;
  JoystickEnabled = 1;
  FullScreenWidth = 1920;
  FullScreenHeight = 1080;
  
  '''
# ---
# name: TestECWolfGenerator.test_generate_ecwolf_pk3
  tuple(
    list([
      'ecwolf',
      '--file',
      'Wolfenstein 3D.pk3',
      '--savedir',
      '/userdata/saves/ecwolf/Wolfenstein 3D.pk3',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'XDG_CONFIG_HOME': '/userdata/system/configs',
      'XDG_DATA_HOME': '/userdata/saves',
    }),
  )
# ---
# name: TestECWolfGenerator.test_generate_ecwolf_rom[--data wl6 --file HD/ECWolf_hdpack.pk3]
  tuple(
    tuple(
      list([
        'ecwolf',
        '--data',
        'wl6',
        '--file',
        'HD/ECWolf_hdpack.pk3',
        '--savedir',
        '/userdata/saves/ecwolf/Wolfenstein 3D.ecwolf',
      ]),
      dict({
        'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
        'XDG_CONFIG_HOME': '/userdata/system/configs',
        'XDG_DATA_HOME': '/userdata/saves',
      }),
    ),
    '/userdata/roms/ecwolf',
  )
# ---
# name: TestECWolfGenerator.test_generate_ecwolf_rom[./wolf3d14 --data sd2 --file ../HD/ECWolf_hdpack.pk3]
  tuple(
    tuple(
      list([
        'ecwolf',
        '--data',
        'sd2',
        '--file',
        '../HD/ECWolf_hdpack.pk3',
        '--savedir',
        '/userdata/saves/ecwolf/Wolfenstein 3D.ecwolf',
      ]),
      dict({
        'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
        'XDG_CONFIG_HOME': '/userdata/system/configs',
        'XDG_DATA_HOME': '/userdata/saves',
      }),
    ),
    '/userdata/roms/ecwolf/wolf3d14',
  )
# ---
# name: TestECWolfGenerator.test_generate_ecwolf_rom_chdir_raises
  tuple(
    tuple(
      list([
        'ecwolf',
        '--savedir',
        '/userdata/saves/ecwolf/Wolfenstein 3D.ecwolf',
      ]),
      dict({
        'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
        'XDG_CONFIG_HOME': '/userdata/system/configs',
        'XDG_DATA_HOME': '/userdata/saves',
      }),
    ),
    '/userdata/roms/ecwolf',
  )
# ---
# name: TestECWolfGenerator.test_generate_existing[config]
  '''
  Vid_FullScreen = 0;
  Vid_Aspect = 1;
  Vid_Vsync = 0;
  QuitOnEscape = 0;
  Foo = 0;
  Bar = 1;
  JoystickEnabled = 1;
  FullScreenWidth = 1920;
  FullScreenHeight = 1080;
  
  '''
# ---
# name: TestECWolfGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ESC',
      'pause': 'KEY_ESC',
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F8',
    }),
    'name': 'ecwolf',
  })
# ---
